# fixed-point

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
src/fixedpoint/: __init__.py  _cassette.py  _interceptor.py  _registry.py  _serializer.py  _types.py  plugin.py
tests/: test_cassette.py  test_interceptor.py  test_plugin.py  test_registry.py  test_serializer.py  test_serializer_extensions.py
tests/sample_app/: math_funcs.py
