[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-fixedpoint"
dynamic = ["version"]
description = "Pytest plugin for recording and replaying deterministic function calls"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pytest>=7.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
]

[project.entry-points.pytest11]
fixedpoint = "fixedpoint.plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["fixedpoint"]
